--- a/Challenge04/index.html
+++ b/Challenge04/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://use.typekit.net/lxy8kpx.css">
-
+    <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>    
     <link href="/css/site.css" rel="stylesheet">
     <link href="/Challenge04/site04.css" rel="stylesheet">
 </head>
@@ -56,7 +56,29 @@
             </div>
         </div>
     </main>
-
+    <!-- Footer Section-->
+    <footer class="footer mt-auto py-3 sticky-footer">
+        <div class="container-fluid">
+            <div class="row row-cols-2 row-cols-md-3 gy-2">
+                <div class="col-12 order-last order-md-first text-light d-flex align-items-center">
+                    <div><span class="text-muted">&copy;2022</span> Jonathan Kay | info@jonathankay.dev</div>
+                </div>
+                <div class="col d-flex align-items-center justify-content-start justify-content-lg-center">
+                    <img src="/img/JK-Light.svg" alt="Jonathan Kay Logo" height="32px">
+                </div>
+                <div class="col d-flex align-items-center justify-content-end justify-content-lg-end">
+                    <div class="row">
+                        <div class="col social">
+                            <a target="_blank" href="https://www.linkedin.com/in/jonathan-kay-23321460/"><i class="fab fa-linkedin fa-2x"></i></a>
+                        </div>
+                        <div class="col social">
+                            <a target="_blank" href="https://github.com/JonathanKayDev"><i class="fab fa-github fa-2x"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
