--- a/index.html
+++ b/index.html
@@ -27,13 +27,9 @@
             <div class="row">
                 <div class="col-12 col-md-6 mt-2 mt-md-0">
                     <h1>JS Coding Challenges</h1>
-                    <p class="lead">Build these 10 coding challenges to get ready for your next tech interview.</p>
-                    <p class="lead">
-                        These challenges are some of the most common whiteboard challenges that our students face. First
-                        try and build them. If you still need some help we have built a FREE course on <a
-                            href="https://learn.coderfoundry.com">learn.coderfoundry.com.</a>
-                    </p>
-                    <p class="lead">Sign up for your FREE account today to get this course!</p>
+                    <p class="lead">Here are my solutions to the 10 coding challenges from Coder Foundry.</p>
+                    <p class="lead">Sign up for a FREE account at <a
+                        href="https://learn.coderfoundry.com">learn.coderfoundry.com.</a> to get this course!</p>
                     <div class="text-center mt-5">
                         <div>Powered By</div>
                         <img src="/img/CF_Logo_BO.png" width="250">
