Update text layout

--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
             <div class="row">
                 <div class="col-12 col-md-6 mt-2 mt-md-0">
                     <h1>JS Coding Challenges</h1>
-                    <p class="lead">Here are my solutions to the 10 coding challenges from Coder Foundry.</p>
+                    <p class="lead">Here are my solutions to the top 10 coding challenges from Coder Foundry.</p>
                     <p class="lead">Sign up for a FREE account at <a
                         href="https://learn.coderfoundry.com">learn.coderfoundry.com.</a> to get this course!</p>
+                    <p class="lead"><a target="_blank" href="https://github.com/JonathanKayDev/JSCodingChallenges">Git Repository</a></p>
+                    <p class="lead"><a target="_blank" href="https://www.jonathankay.dev">Jonathan Kay</a></p>
                     <div class="text-center mt-5">
                         <div>Powered By</div>
                         <img src="/img/CF_Logo_BO.png" width="250">
