--- a/Challenge03/index.html
+++ b/Challenge03/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-xl navbar-dark fixed-top bg-dark" id="navmenu">
 
     </nav>
-    <main class="container-fluid h-100 px-5">
+    <main class="container-fluid px-5">
         <div class="row">
             <div class="col-12 col-md-6">
                 <h1>convert kilometers to miles</h1>
