--- a/Challenge04/index.html
+++ b/Challenge04/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-xl navbar-dark fixed-top bg-dark" id="navmenu">
 
     </nav>
-    <main class="container-fluid h-100 px-5">
+    <main class="container-fluid px-5">
         <div class="row">
             <div class="col-12 col-md-6">
                 <h1>Sort an array of objects</h1>
@@ -37,7 +37,7 @@
                     <button id="btnSubmit" type="button" class="btn btn-warning">Display Data</button>
                 </div>
                 <div class="mt-2">
-                    <table class="table table-striped table-dark table-hover">
+                    <table class="table table-responsive table-striped table-dark table-hover">
                         <thead>
                             <th>City</th>
                             <th>State</th>
