--- a/Challenge09/index.html
+++ b/Challenge09/index.html
@@ -17,7 +17,7 @@
     <link href="/Challenge09/site09.css" rel="stylesheet">
 </head>
 
-<body class="h-100">
+<body class="d-flex flex-column h-100">
     <nav class="navbar navbar-expand-xl navbar-dark fixed-top bg-dark" id="navmenu">
 
     </nav>
